working this project

--- a/package.json
+++ b/package.json
@@ -6,33 +6,36 @@
   "author": "Brian Holt <btholt@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "test": "NODE_ENV=test jest",
-    "update-test": "npm run test -- -u",
+    "lint": "eslint js/**/*.js webpack.config.js",
     "build": "webpack",
     "dev": "webpack-dev-server",
-    "lint": "eslint js/**/*.js server.js",
-    "watch": "webpack --watch"
+    "watch": "npm run build -- --watch",
+    "test": "NODE_ENV=test jest",
+    "update-test": "npm run test -- -u",
+    "cover": "npm run test -- --coverage"
   },
   "dependencies": {
     "axios": "0.15.2",
     "express": "4.14.0",
+    "firebase": "^3.6.9",
     "history": "^4.4.0",
     "lodash": "4.16.2",
     "preact": "^6.4.0",
     "preact-compat": "^3.9.3",
-    "react": "15.3.2",
+    "react": "^15.3.2",
     "react-dom": "15.3.2",
     "react-redux": "4.4.0",
     "react-router": "4.0.0-alpha.5",
+    "reactfire": "^1.0.0",
     "redux": "3.3.1",
     "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
     "babel-core": "6.16.0",
-    "babel-jest": "16.0.0",
+    "babel-jest": "^16.0.0",
     "babel-loader": "6.2.7",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.18.0",
-    "babel-polyfill": "^6.16.0",
+    "babel-polyfill": "^6.22.0",
     "babel-preset-es2015": "6.18.0",
     "babel-preset-es2017": "6.16.0",
     "babel-preset-react": "6.16.0",
@@ -48,7 +51,8 @@
     "eslint-plugin-promise": "2.0.1",
     "eslint-plugin-react": "6.3.0",
     "eslint-plugin-standard": "2.0.0",
-    "jest": "15.1.1",
+    "jest": "^15.1.1",
+    "jest-cli": "^18.1.0",
     "jsdom": "9.5.0",
     "json-loader": "0.5.4",
     "react-addons-test-utils": "15.3.2",
